@@ -5,6 +5,7 @@ import org.dskxvos.function.*;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.Arrays;
+import java.util.List;
 
 public class Test {
     public static void main(String[] args) {
@@ -19,10 +20,10 @@ public class Test {
         fluxBuilder.from("Vehicle")
                 .range(LocalDateTime.now().minusDays(5),LocalDateTime.now().plusHours(24),zoneOffset)
                 .measurement("vehicle_trajectory")
-                .function(new Filter().fieldEq("_field","todayAccDuration"))
-                .function(new Top().n(1).columns(Arrays.asList("_value","_time")))
-                .function(new Group(Arrays.asList(FiledConstants._measurement,"_field")))
-                .function(new Top().n(5).columns(Arrays.asList("_value")));
+                .function(new Filter().fieldEq(FieldConstants._field,"todayAccDuration"))
+                .function(new Top().n(1).columns(Arrays.asList(FieldConstants._value,FieldConstants._time)))
+                .function(new Group(Arrays.asList(FieldConstants._measurement,"_field")))
+                .function(new Top().n(5).columns(List.of("_value")));
         System.out.println(fluxBuilder.build());
     }
 
